# Lattice-Console

./: IMPLEMENTATION_ACHIEVEMENT.md  IMPLEMENTATION_STATUS.md  README.md  package.json  playwright.config.ts  pnpm-lock.yaml
apps/agent/: package.json  tsconfig.json
apps/backend/: .env.example  package.json  pnpm-lock.yaml  tsconfig.json
docs/: Delty-Mvp-roadmap-guide.md  Delty-Technical-guide.md  Development Execution Package_ Open-Source Decentralized Cloud Platform.md  Open-Source Decentralized Cloud Platform_ Unified Strategic Overview.md  Strategic Analysis_ Open-Source Decentralized Cloud Platform.md  Technical Implementation Guide_ Open-Source Decentralized Cloud Platform.md  critical-mvp-fix-plan.md  delty-criatcalmvpv3.md  delty-critical-stepv2.md  delty-next-implentations.md  implementation.md
docs/api-specs/: api-mvp-build.md  openapi-spec.md
docs/architecture/: 10x-automation-mvp-build.md  10x-roadmap-automation.md  ai-ml-integration-plan.md  ai-ml-mvp-build.md  critical-path-risk-register.md
docs/product-design/: mvp-0.1-action-plan.md  ui-ux-design-spec.md  ui-ux-mvp-build.md
e2e/: onboarding.spec.ts  package-lock.json  package.json  run-e2e.sh  smoke.spec.js  smoke.spec.ts  workload-dashboard.spec.ts
lattice-console/: .env.example  .eslintrc.js  .gitignore  IMPLEMENTATION_COMPLETE.md  README.md  TEST_LATTICE_CONSOLE.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.json
lattice-console/apps/onboarding-app/src-tauri/: Cargo.toml  tauri.conf.json
lattice-console/apps/onboarding-app/src-tauri/src/: main.rs
scripts/: setup.sh
(+85 files in other folders)
